--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -43,7 +43,7 @@ Further thanks go to Dr. Jan Deriu.
 He has always helped to translate abstract ideas into concrete algorithms and to get them running.
 It's impressive how your understanding of deep learning can make complex problems look so simple.
 To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in introducing me to neuroscience.
-You have inspired me regularly with ideas and opened up a new way of thinking about deep learning (this was also the inspiration for Geoffrey Hinton's quote on the second page, although I wouldn't presume to say that this thesis will change the future).
+You have inspired me regularly with ideas and opened up a new way of thinking about deep learning (this was also the inspiration for Geoffrey Hinton's quote at the beginning of this thesis, although I wouldn't presume to say that this thesis will change the future).
 Even though we couldn't implement all of your ideas in this thesis, I learned a lot in our discussions and hope that I will be able to tackle more of your thoughts in the future.
 
 The most profound thanks, however, goes to my family, who made this journey possible for me:
