--- a/tex/results.tex
+++ b/tex/results.tex
@@ -56,7 +56,7 @@ This analysis shows that the system can remove about $71.2\%$ of the noise from 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.49\textwidth]{features_noise_data}
-    \caption[Features triggered by noise]{.}
+    \caption[Features triggered by noise]{The features triggered by noise (on the left) compared with the features triggered by a line end (on the right).}
     \figlbl{features_noise_data}
 \end{figure}
 %
