--- a/tex/title_page.tex
+++ b/tex/title_page.tex
@@ -1,3 +1,54 @@
+\newgeometry{margin=1in}
+\begin{titlepage}
+
+\setlength{\parskip}{0pt}
+
+\begin{center}
+\includegraphics[width=0.2\textwidth]{ZHAW_Logo}
+
+\vspace{0.87cm}
+{\includegraphics[height=17.9pt]{zhaw_font_eng_font}\par}
+\vspace{0.4cm}
+{\Large School of Engineering \par}
+\vspace{0.15cm}
+{\Large Centre for Artificial Intelligence\par}
+
+\vspace{1.5cm}                            
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\vspace{0.2cm}
+{\par\huge\bfseries Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Bernoulli Neurons\par}
+\vspace{0.4cm}
+{\par\Large Incorporating Findings from Neuroscience about Natural Intelligence into a Computational Framework\par}
+\vspace{0.2cm}  
+
+\par\noindent\rule{\textwidth}{0.4pt}
+\vspace{1.2cm}
+
+{\par\noindent\large A thesis by}
+\vspace{0.25cm}
+{\par\noindent\Large Pascal Sager}
+\vspace{1.0cm}
+{\par\noindent\large for the degree of}
+\vspace{0.25cm}
+{\par\noindent\Large  Master of Science}
+\vspace{1.0cm}
+
+{\par\noindent\large Supervised by}
+\vspace{0.25cm}
+{\par\noindent\Large Prof. Dr. Thilo Stadelmann}
+\vspace{0.2cm}
+{\par\noindent\Large Dr. Jan Milan Deriu}
+\vspace{0.2cm}
+{\par\noindent\Large Prof. Dr. Christoph von der Malsburg}
+
+\vspace{1.2cm} 
+{\Large \today}
+
+\end{center}
+\end{titlepage}
+\restoregeometry
+
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
