--- a/tex/math.tex
+++ b/tex/math.tex
@@ -2,6 +2,7 @@
 
 Depending on the context, a variable can be a scalar value, a vector, or a matrix. The following formatting is used:
 
+\renewcommand{\arraystretch}{1.3}
 \begin{tabular}{ p{5cm} p{2cm} p{7cm} }
 	\textbf{Formatting} & \textbf{Example} & \textbf{Meaning}\\
 	\hline
@@ -28,8 +29,13 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	$\boldsymbol{w} = (w_1, ..., w_n)$ & A weight vector of a neuron, mapping an input of length $n$ to a scalar value.\\
 	$\boldsymbol{W} = (\boldsymbol{w}_1, ..., \boldsymbol{w}_k)$ & A weight matrix of a network layer.\\
     $\boldsymbol{x} = (x_1, ..., x_n)$ & An input sample that is fed into a model or a network layer, typically a vector of length $n$.\\
-    $\boldsymbol{y}$ & The expected output of a model or a network layer (i.e. the ground truth), typically a vector ($\boldsymbol{y}$) for a multi-class classification task or a scalar value ($y$) for a regression or single-class classification task.\\
-	$\boldsymbol{\hat{y}}$ & The actual output of a model or a network layer (i.e. the prediction), typically a vector ($\boldsymbol{\hat{y}}$) for a multi-class classification task or a scalar value ($\hat{y}$) for a regression or single-class classification task.\\
+ \end{tabular}
+ 
+ \begin{tabular}{ p{3cm} p{11cm} }
+	\textbf{Variable} & \textbf{Meaning}\\
+	\hline
+     $\boldsymbol{y}$ & The expected output of a model or a network layer (i.e. the ground truth), typically a vector ($\boldsymbol{y}$) for a multi-class classification task or a scalar value ($y$) for a regression or single-class classification task.\\
+ 	$\boldsymbol{\hat{y}}$ & The actual output of a model or a network layer (i.e. the prediction), typically a vector ($\boldsymbol{\hat{y}}$) for a multi-class classification task or a scalar value ($\hat{y}$) for a regression or single-class classification task.\\
 	$\boldsymbol{z} = (z_1, ..., z_k)$ & The output of the aggregation functions $g_1(\cdot), ..., g_n(\cdot)$ of a network layer of length $k$. $z_i$  is the output of the aggregation function of a single neuron.\\
 \end{tabular}
 
@@ -42,7 +48,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	$f(\cdot)$ & An activation function such as $\sigma(\cdot)$, $(\cdot)^{+}$, or $\tanh(\cdot)$ (c.f. \eqref{act_functions})\\
 	$g(\cdot)$ & The aggregation function that calculates the scalar value that is fed into the activation function $f(\cdot)$ (c.f. \eqref{McCulloch_Pitts_agg},  \eqref{nn})\\
 \end{tabular}
-
+\renewcommand{\arraystretch}{1}
 
 
 
